// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> spec renders multi select component with groups and filter input 1`] = `
<DocumentFragment>
  <div
    class="wrapper root"
    id="select-component"
    tabindex="-1"
  >
    <label
      class="label "
      for="select-component-dropdown-button"
      id="select-component-label"
    >
      Label
    </label>
    <div
      class="selectAndListContainer"
    >
      <div
        class="selectedOptionsContainer"
      >
        <button
          aria-controls="select-component-input-element"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-invalid="false"
          aria-label="Label. . 0 options selected."
          class="dropdownButton selectedOptions placeholder spaceForOneDigit"
          id="select-component-dropdown-button"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              aria-label="location"
              class="icon s"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.9669 1.5C14.0265 1.5 16.0869 2.27765 17.6579 3.83367C20.8001 6.945 20.5878 11.7938 17.6579 15.1017L17.0345 15.8107C14.4235 18.8021 12.9688 20.7706 11.9669 22.7477C10.8937 20.6185 9.28527 18.4993 6.27797 15.1017C3.34814 11.7938 3.13508 6.945 6.27797 3.83367C7.84906 2.27765 9.90869 1.5 11.9669 1.5ZM11.999 3.5C10.3743 3.5 8.84685 4.12598 7.69956 5.26179C6.56645 6.38341 5.97897 7.81769 6.00058 9.41066C6.02151 10.984 6.64884 12.5453 7.76709 13.8087L8.42773 14.5606C10.0167 16.3842 11.1442 17.8 12.0004 19.0644C12.9748 17.6274 14.2916 16.0006 16.233 13.8087C17.3512 12.5453 17.9786 10.984 17.9995 9.41066C18.0198 7.81769 17.4323 6.38341 16.3005 5.26179C15.1519 4.12598 13.6251 3.5 11.999 3.5ZM12.0004 6C13.9338 6 15.5 7.56702 15.5 9.50039C15.5 11.433 13.9338 13 12.0004 13C10.067 13 8.5 11.433 8.5 9.50039C8.5 7.56702 10.067 6 12.0004 6ZM12.0003 8C11.1725 8 10.5 8.67319 10.5 9.50034C10.5 10.3268 11.1725 11 12.0003 11C12.8275 11 13.5 10.3268 13.5 9.50034C13.5 8.67319 12.8275 8 12.0003 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="labels"
          >
            <span
              class="dropdownButtonOption"
            />
          </div>
        </button>
        <button
          aria-hidden="true"
          class="dropdownButton icon arrowButton"
          id="select-component-arrow-button"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            aria-label="angle-down"
            class="icon s angleIcon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12 13.5L17 8.5L18.5 10L12 16.5L5.5 10L7 8.5L12 13.5Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        aria-hidden="true"
        aria-label="Label"
        class="listAndInputContainer withSearchOrFilter"
        role="dialog"
      >
        <div
          class="root searchOrFilterInput"
        >
          <label
            class="label "
            for="select-component-input-element"
            id="select-component-input-element-label"
          >
            Filter
          </label>
          <div
            class="inputWrapper"
          >
            <input
              aria-activedescendant=""
              aria-controls="select-component-list"
              aria-expanded="true"
              aria-haspopup="dialog"
              aria-labelledby="select-component-input-element-label select-component-label"
              class="input hasClearButton"
              id="select-component-input-element"
              placeholder="Type text to filter results with"
              role="combobox"
              type="text"
              value=""
            />
            <div
              class="buttonWrapper"
            >
              <button
                aria-label="Clear filter"
                class="button clearButton"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="cross-circle"
                  class="icon s"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM15 7.5L16.5 9L13.5 12L16.5 15L15 16.5L12 13.5L9 16.5L7.5 15L10.5 12L7.5 9L9 7.5L12 10.5L15 7.5Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="listContainer hidden"
          style="max-height: 286px;"
        >
          <div
            aria-labelledby="select-component-choices-count"
            class="list shiftOptions multiSelectList"
            id="select-component-list"
            role="dialog"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="screenReaderNotifications"
    />
  </div>
</DocumentFragment>
`;

exports[`<Select /> spec renders single select component with groups and filter input 1`] = `
<DocumentFragment>
  <div
    class="wrapper root"
    id="select-component"
    tabindex="-1"
  >
    <label
      class="label "
      for="select-component-dropdown-button"
      id="select-component-label"
    >
      Label
    </label>
    <div
      class="selectAndListContainer"
    >
      <div
        class="selectedOptionsContainer"
      >
        <button
          aria-controls="select-component-input-element"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-invalid="false"
          aria-label="Label. . 0 options selected."
          class="dropdownButton selectedOptions placeholder spaceForOneDigit"
          id="select-component-dropdown-button"
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              aria-label="location"
              class="icon s"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.9669 1.5C14.0265 1.5 16.0869 2.27765 17.6579 3.83367C20.8001 6.945 20.5878 11.7938 17.6579 15.1017L17.0345 15.8107C14.4235 18.8021 12.9688 20.7706 11.9669 22.7477C10.8937 20.6185 9.28527 18.4993 6.27797 15.1017C3.34814 11.7938 3.13508 6.945 6.27797 3.83367C7.84906 2.27765 9.90869 1.5 11.9669 1.5ZM11.999 3.5C10.3743 3.5 8.84685 4.12598 7.69956 5.26179C6.56645 6.38341 5.97897 7.81769 6.00058 9.41066C6.02151 10.984 6.64884 12.5453 7.76709 13.8087L8.42773 14.5606C10.0167 16.3842 11.1442 17.8 12.0004 19.0644C12.9748 17.6274 14.2916 16.0006 16.233 13.8087C17.3512 12.5453 17.9786 10.984 17.9995 9.41066C18.0198 7.81769 17.4323 6.38341 16.3005 5.26179C15.1519 4.12598 13.6251 3.5 11.999 3.5ZM12.0004 6C13.9338 6 15.5 7.56702 15.5 9.50039C15.5 11.433 13.9338 13 12.0004 13C10.067 13 8.5 11.433 8.5 9.50039C8.5 7.56702 10.067 6 12.0004 6ZM12.0003 8C11.1725 8 10.5 8.67319 10.5 9.50034C10.5 10.3268 11.1725 11 12.0003 11C12.8275 11 13.5 10.3268 13.5 9.50034C13.5 8.67319 12.8275 8 12.0003 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-hidden="true"
            class="labels"
          >
            <span
              class="dropdownButtonOption"
            />
          </div>
        </button>
        <button
          aria-hidden="true"
          class="dropdownButton icon arrowButton"
          id="select-component-arrow-button"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            aria-label="angle-down"
            class="icon s angleIcon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12 13.5L17 8.5L18.5 10L12 16.5L5.5 10L7 8.5L12 13.5Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        aria-hidden="true"
        aria-label="Label"
        class="listAndInputContainer withSearchOrFilter"
        role="dialog"
      >
        <div
          class="root searchOrFilterInput"
        >
          <label
            class="label "
            for="select-component-input-element"
            id="select-component-input-element-label"
          >
            Filter
          </label>
          <div
            class="inputWrapper"
          >
            <input
              aria-activedescendant=""
              aria-controls="select-component-list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-labelledby="select-component-input-element-label select-component-label"
              class="input hasClearButton"
              id="select-component-input-element"
              placeholder="Type text to filter results with"
              role="combobox"
              type="text"
              value=""
            />
            <div
              class="buttonWrapper"
            >
              <button
                aria-label="Clear filter"
                class="button clearButton"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="cross-circle"
                  class="icon s"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM15 7.5L16.5 9L13.5 12L16.5 15L15 16.5L12 13.5L9 16.5L7.5 15L10.5 12L7.5 9L9 7.5L12 10.5L15 7.5Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="listContainer hidden"
          style="max-height: 286px;"
        >
          <div
            aria-multiselectable="false"
            class="list"
            id="select-component-list"
            role="listbox"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="screenReaderNotifications"
    />
  </div>
</DocumentFragment>
`;
